--- a/src/main/webapp/WEB-INF/views/twitters/list.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/list.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:list id="pl_com_aeiou_bigbang_domain_Twitter" items="${twitters}" z="o5L4AOCJ18nHO4zgQketGUlXT5g=">
-        <table:table data="${twitters}" id="l_com_aeiou_bigbang_domain_Twitter" path="/twitters" z="cYCbdZX2dPibClNCvaX+Sv/y2a0=">
+        <table:BigSortable data="${twitters}" id="l_com_aeiou_bigbang_domain_Twitter" path="/twitters" z="cYCbdZX2dPibClNCvaX+Sv/y2a0=">
             <table:column id="c_com_aeiou_bigbang_domain_Twitter_twtitle" property="twtitle" z="znDzR2exbTQ46ygK4oITCZTkf7A="/>
             <table:column id="c_com_aeiou_bigbang_domain_Twitter_twitent" property="twitent" z="vO9zdqfnwHkQErllpK/b7ReFK+8="/>
             <table:column id="c_com_aeiou_bigbang_domain_Twitter_twittertag" property="twittertag" z="rgD6X1OfH48ZJjgsSjMv3zjVoNI="/>
@@ -12,6 +12,6 @@
 			<c:if test="${fn:toLowerCase(pageContext['request'].userPrincipal.name) eq 'admin'}">
               <table:column id="c_com_aeiou_bigbang_domain_Twitter_publisher" property="publisher" z="srXidqv1vRac99ZHTFDWddi1FKY="/>
 			</c:if>
-        </table:table>
+        </table:BigSortable>
     </page:list>
 </div>
