--- a/src/main/webapp/WEB-INF/layouts/simple.jspx
+++ b/src/main/webapp/WEB-INF/layouts/simple.jspx
@@ -18,6 +18,16 @@
 	</head>
 	
   	<body class="tundra spring" background="getImage/uc_${fn:toLowerCase(spaceOwner)}_bg">
+   		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-53989624-1', 'auto');
+		  ga('send', 'pageview');
+		
+		</script>
    		<div id="wrapper">
 		    <tiles:insertAttribute name="header" ignore="true" />
 		    <tiles:insertAttribute name="menu" ignore="true" />   
