--- a/src/main/webapp/WEB-INF/layouts/default.jspx
+++ b/src/main/webapp/WEB-INF/layouts/default.jspx
@@ -1,4 +1,4 @@
-<html xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:c="http://java.sun.com/jsp/jstl/core" 
+<html manifest="bigbang.appcache" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:c="http://java.sun.com/jsp/jstl/core" 
 xmlns:tiles="http://tiles.apache.org/tags-tiles" xmlns:spring="http://www.springframework.org/tags" 
 xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" xmlns:fn="http://java.sun.com/jsp/jstl/functions">  
 	
