--- a/deploy/create_fr.jspx
+++ b/deploy/create_fr.jspx
@@ -26,7 +26,7 @@ xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
                     <p>Hi Big Editor, Adding some interesting content?</p>
                     <p>Cool! And here's some notes for you:</p>
                     <p>1.Just put down the Title and URL, they will be displayed on both public space and your own space.</p>
-                    <p>2.Don't know where is your own space yet? How about this: <a>http://fr.ShareTheGoodOnes.com/${pageContext['request'].userPrincipal.name}</a>
+                    <p>2.Don't know where is your own space yet? How about this: <a>http://www.ShareTheGoodOnes.com/${pageContext['request'].userPrincipal.name}</a>
                     </p>
                     <p>3.What? can not find a tag for your content in public space? OK, please use 'other' for now.</p>
                     <p>4.Sure you can create new tag, you are the big editor! BTW, in your own space, content will be organised with tags you created.</p>
