--- a/src/main/webapp/WEB-INF/views/customizes/show.jspx
+++ b/src/main/webapp/WEB-INF/views/customizes/show.jspx
@@ -5,5 +5,6 @@
     <page:show id="ps_com_aeiou_bigbang_domain_Customize" object="${customize}" path="/customizes" z="2N271YA8Zb7Vg9/g7+q2znJ5x1Q=">
         <field:display field="cusKey" id="s_com_aeiou_bigbang_domain_Customize_cusKey" object="${customize}" z="MdOaIdVnA95t1UF/SPbS8+oexZM="/>
         <field:display field="cusValue" id="s_com_aeiou_bigbang_domain_Customize_cusValue" object="${customize}" z="+aouao0Q2D8V745XQ+Rh2nm86N8="/>
+        <field:display field="useraccount" id="s_com_aeiou_bigbang_domain_Customize_useraccount" object="${customize}" z="vKdppaARcl4qgqBzlmbDxiEhSVc="/>
     </page:show>
 </div>
