so when updating (this happen only when first open the page, or change the langue.) we update all customizes of admin's, then partially cover it with owner's customise. now the cuskey is not unique id anymore, so we should control from webpage to make sure one person don't have two same customize key.

--- a/src/main/webapp/WEB-INF/layouts/default.jspx
+++ b/src/main/webapp/WEB-INF/layouts/default.jspx
@@ -14,7 +14,7 @@ xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" xmlns:fn="http://java.sun.com/jsp/
 		<util:load-scripts />
 		
 		<spring:message code="application_name" var="app_name" htmlEscape="false"/>
-		<title><spring:message code="welcome_h3"/></title>
+		<title>${app_name}</title>
 	</head>
 	
   	<body class="tundra spring" background="getImage/uc_${fn:toLowerCase(spaceOwner)}_bg">
