--- a/src/main/webapp/WEB-INF/layouts/simple.jspx
+++ b/src/main/webapp/WEB-INF/layouts/simple.jspx
@@ -14,7 +14,7 @@
 		<util:load-scripts />
 		
 		<spring:message code="application_name" var="app_name" htmlEscape="false"/>
-		<title><spring:message code="welcome_h3"/></title>
+		<title>${app_name}</title>
 	</head>
 	
   	<body class="tundra spring" background="getImage/uc_${fn:toLowerCase(spaceOwner)}_bg">
