--- a/src/main/webapp/WEB-INF/views/footer.jspx
+++ b/src/main/webapp/WEB-INF/views/footer.jspx
@@ -10,28 +10,28 @@
   	 -->
 	<!-- language bar -->
 	<span class="new" style="color: #AAAAAA;">
-		<c:if test="${zh != null}">
+		<c:if test="${zh == true}">
 			<util:language label="Chinese" locale="zh"/>
 		</c:if>
-		<c:if test="${en != null}">
+		<c:if test="${en == true}">
 			<c:out value=" | "/>
 			<util:language label="English" locale="en"/>
 		</c:if>
-		<c:if test="${fr != null}">
+		<c:if test="${fr == true}">
 			<c:out value=" | "/>
 			<util:language label="French" locale="fr"/>
 		</c:if>
-		<c:if test="${es != null}">
+		<c:if test="${es == true}">
 			<c:out value=" | "/>
 			<util:language label="Spanish" locale="es"/>
 		</c:if>
-		<c:if test="${it != null}">
+		<c:if test="${it == true}">
 			<c:out value=" | "/>
 			<util:language label="Italian" locale="it"/>
 		</c:if>
 	</span>
   <br/>
   <div style="color: #AAAAAA; text-align: right;">
-   ©Copyright 2012 - 2014 | info@sharethegoodones.com
+   ${txt_footer_line2}
   </div>
 </div>
